--- a/css/index.html
+++ b/css/index.html
@@ -15,7 +15,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=328987819"/>
-  <title>Home</title>
+  <title>Taquicardia Ventricular</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=186167303"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=142272992" id="pagesheet"/>
@@ -113,7 +113,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div id="u3633"><!-- simple frame --></div>
       </div>
       <div class="T-tulos-H2 clearfix grpelem shared_content" id="u3889-5" data-content-guid="u3889-5_content"><!-- content -->
-       <h2><span id="u3889">[&nbsp; ]</span>Equipo 17</h2>
+       <h2><span id="u3889">[&nbsp; ]</span>Equipo 10</h2>
       </div>
      </div>
      <div class="clearfix colelem" id="pu5955-4"><!-- group -->
