--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <div class="clearfix grpelem shared_content" id="u3626" data-content-guid="u3626_content"><!-- column -->
        <div class="T-tulos-H2 clearfix colelem" id="u3640-4"><!-- content -->
-        <h2>MECANISMO DE AUTOAJUSTE  DE PRÓTESIS EN LA INTERFAZ MIEMBRO SUPERIOR RESIDUAL - PRÓTESIS PARA AMPUTACIÓN TRANSRADIAL</h2>
+        <h2>TAQUICARDIA VENTRICULAR - DIAGNOSTICO</h2>
        </div>
        <div class="colelem" id="u3647"><!-- simple frame --></div>
       </div>
@@ -214,19 +214,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
          <div class="clearfix colelem" id="pu7584-6"><!-- group -->
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7584-6" data-content-guid="u7584-6_content"><!-- content -->
-           <h3>César Fernández</h3>
+           <h3>Andrés Reyes/h3>
            <h3>Coordinador administrativo</h3>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7591-6" data-content-guid="u7591-6_content"><!-- content -->
-           <h3>Sebastián Ibarra</h3>
+           <h3>Arelí Sánchez</h3>
            <h3>Coordinador administrativo</h3>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7632-6" data-content-guid="u7632-6_content"><!-- content -->
-           <h3>Claudia Palacios</h3>
+           <h3>Alejandro Flores</h3>
            <h3>Coordinador técnico</h3>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7647-6" data-content-guid="u7647-6_content"><!-- content -->
-           <h3>Pierina Laura</h3>
+           <h3>Ricardo Guerrero</h3>
            <h3>Coordinador principal</h3>
           </div>
          </div>
@@ -274,7 +274,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
      <div class="T-tulos-H2 clearfix mse_pre_init shared_content" id="u3889-5" data-content-guid="u3889-5_content"><!-- content -->
-      <h2><span id="u3889">[&nbsp; ]</span>Equipo 17</h2>
+      <h2><span id="u3889">[&nbsp; ]</span>Equipo 10</h2>
      </div>
      <div class="browser_width mse_pre_init shared_content" id="u16441-bw" data-content-guid="u16441-bw_content">
       <div class="ose_pre_init" id="u16441"><!-- simple frame --></div>
