--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
          <div class="clearfix colelem" id="pu7584-6"><!-- group -->
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7584-6" data-content-guid="u7584-6_content"><!-- content -->
-           <h3>Andrés Reyes/h3>
+           <h3>Andrés Reyes</h3>
            <h3>Coordinador administrativo</h3>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7591-6" data-content-guid="u7591-6_content"><!-- content -->
