--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <img class="position_content temp_no_img_src" id="u7532_img" data-orig-src="images/whatsapp%20image%202018-08-31%20at%2012413%20pm.jpg?crc=3773832018" alt="" width="234" height="354" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u11263"><!-- image -->
-           <img class="block temp_no_img_src" id="u11263_img" data-orig-src="images/whatsapp%20image%202018-08-25%20at%20113855%20am-crop-u11263.jpg?crc=80175385" alt="" width="233" height="321" src="images/blank.gif?crc=4208392903"/>
+           <img class="block temp_no_img_src" id="u11263_img" data-orig-src="images/biodiseño.jpg?crc=80175385" alt="" width="233" height="321" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u7554"><!-- image -->
            <img class="block temp_no_img_src" id="u7554_img" data-orig-src="images/whatsapp%20image%202018-08-23%20at%20105555%20pm-crop-u7554.jpg?crc=406752802" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
