--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="popup_anchor" id="u5024popup">
         <div class="SlideShowContentPanel clearfix" id="u5024"><!-- stack box -->
          <div class="SSSlide clip_frame grpelem" id="u5025"><!-- image -->
-          <img class="ImageInclude" id="u5025_img" data-src="images/hospital-palamvihar.jpg?crc=3851032277" src="images/blank.gif?crc=4208392903" alt="" data-width="1927" data-height="700"/>
+          <img class="ImageInclude" id="u5025_img" data-src="images/portada1.jpg?crc=3851032277" src="images/blank.gif?crc=4208392903" alt="" data-width="1927" data-height="700"/>
          </div>
          <div class="SSSlide invi clip_frame grpelem" id="u5027"><!-- image -->
-          <img class="ImageInclude" id="u5027_img" data-src="images/58d1f4a8334b4.jpg?crc=3978602243" src="images/blank.gif?crc=4208392903" alt="" data-width="1219" data-height="700"/>
+          <img class="ImageInclude" id="u5027_img" data-src="images/portada2.jpg?crc=3978602243" src="images/blank.gif?crc=4208392903" alt="" data-width="1219" data-height="700"/>
          </div>
          <div class="SSSlide invi clip_frame grpelem" id="u5029"><!-- image -->
-          <img class="ImageInclude" id="u5029_img" data-src="images/ingenieria_biomedica_img2.jpg?crc=4123807683" src="images/blank.gif?crc=4208392903" alt="" data-width="1274" data-height="700"/>
+          <img class="ImageInclude" id="u5029_img" data-src="images/portada3.jpg?crc=4123807683" src="images/blank.gif?crc=4208392903" alt="" data-width="1274" data-height="700"/>
          </div>
         </div>
        </div>
