--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=328987819"/>
-  <title>Home</title>
+  <title>Taquicardia Ventricular</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=186167303"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=376253846" id="pagesheet"/>
