--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>&nbsp;</p>
         </div>
         <div class="Texto-Subt-tulo clearfix grpelem shared_content" id="u5969-4" data-content-guid="u5969-4_content"><!-- content -->
-         <p><span id="u5969">El accidente de trabajo fue la causa en el 8,37% de los amputados, que generaron 1568,53 años acumulados de vida productiva potencial perdidos, con 14,52 años por cada caso ? (CAMACHO,2010)</span></p>
+         <p><span id="u5969">La taquicardia ventricular...</span></p>
         </div>
        </div>
        <div class="clearfix colelem shared_content" id="u14747-4" data-content-guid="u14747-4_content"><!-- content -->
-        <p>Redacción Gestión. (2017). Laboral: Un promedio de 55 accidentes al día se registra en una jornada de trabajo. Diario Gestión.</p>
+        <p>Fuente</p>
        </div>
       </div>
       <div class="clearfix grpelem shared_content" id="u6060-3" data-content-guid="u6060-3_content"><!-- content -->
@@ -134,7 +134,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <h1>nosotros</h1>
          </div>
          <div class="T-tulos-H2 clearfix colelem shared_content" id="u6220-4" data-content-guid="u6220-4_content"><!-- content -->
-          <h2>Buscamos desarrollar un socket que&nbsp; permita tener una mejor calidad de vida a las personas con amputación de miembro superior transradial.</h2>
+          <h2>Buscamos desarrollar un equipo biomédico que pueda diagnosticar...</h2>
          </div>
         </div>
        </div>
