--- a/index.html
+++ b/index.html
@@ -156,10 +156,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
       <div class="T-tulo-H1 clearfix grpelem shared_content" id="u6452-4" data-content-guid="u6452-4_content"><!-- content -->
-       <h1>Actualización semanal</h1>
+        <h1>Actualización semanal</h1>
       </div>
       <a class="nonblock nontext clip_frame grpelem" id="u6459" href="semana-1.html"><!-- image --><img class="block temp_no_img_src" id="u6459_img" data-orig-src="images/redimensionar-crop-u6459.jpg?crc=4000948382" alt="" width="241" height="178" src="images/blank.gif?crc=4208392903"/></a>
-          </div>
+      
+      <a class="anchor_item grpelem shared_content" id="actualizacion-semanal1" data-content-guid="actualizacion-semanal1_content"></a>
+         <a class="nonblock nontext clearfix grpelem shared_content" id="u7056-4" href="semana-1.html" data-content-guid="u7056-4_content"><!-- content --><p class="Texto-Subt-tulo" id="u7056-2">SEMANA 1</p></a>
+     </div>
      <div class="clearfix colelem" id="pu7518"><!-- group -->
       <div class="browser_width grpelem" id="u7518-bw">
        <div id="u7518"><!-- column -->
