--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html class="nojs html css_verticalspacer" lang="es-ES">
  <head>
   #identificador    {
-margin-top: 0px;
-margin-right: 0px;
-margin-bottom: 0px;
-margin-left: 0px;
+margin-top: 0;
+margin-right: 0;
+margin-bottom: 0;
+margin-left: 0;
 }
 
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
