--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html class="nojs html css_verticalspacer" lang="es-ES">
  <head>
-  #identificador    {
-margin-top: 0;
-margin-right: 0;
-margin-bottom: 0;
-margin-left: 0;
+     {
+margin: 0;
 }
 
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
