--- a/semana-1.html
+++ b/semana-1.html
@@ -13,7 +13,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "jquery.musemenu.js", "jquery.scrolleffects.js", "require.js", "semana-1.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=328987819"/>
+  <link rel="shortcut icon" href="images/icon.ico?crc=328987819"/>
   <title>SEMANA 1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=186167303"/>
@@ -35,14 +35,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu8168"><!-- column -->
-    <div class="clearfix colelem" id="pu8168"><!-- group -->
-     <div class="browser_width grpelem" id="u8168-bw">
-      <div id="u8168"><!-- group -->
-       <div class="clearfix" id="u8168_align_to_page">
+
         <div class="T-tulo-H1 clearfix grpelem" id="u8165-4"><!-- content -->
-         <h1>Presentación de la problemática</h1>
+         <h1>Analisis del caso</h1>
         </div>
        </div>
       </div>
