--- a/semana-1.html
+++ b/semana-1.html
@@ -37,8 +37,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <div class="clearfix" id="page"><!-- group -->
    <div class="clearfix grpelem" id="ppu8168"><!-- column -->
     <div class="clearfix colelem" id="pu8168"><!-- group -->
-     <div class="browser_width grpelem" id="u8168-bw">
-      
+     
+      <div id="u8168"><!-- group -->
        <div class="clearfix" id="u8168_align_to_page">
 
         <div class="T-tulo-H1 clearfix grpelem" id="u8165-4"><!-- content -->
