--- a/semana-1.html
+++ b/semana-1.html
@@ -42,6 +42,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clearfix" id="u8168_align_to_page">
 
         <div class="T-tulo-H1 clearfix grpelem" id="u8165-4"><!-- content -->
+         <img class="position_content" id="u8678_img" src="images/sem1portada.jpg?crc=4221219675" alt="" width="1200" height="676"/>
+
          <h1>Analisis del caso</h1>
         </div>
        </div>
@@ -242,7 +244,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
     <div class="T-tulos-H2 clearfix ose_pre_init mse_pre_init" id="u16928-5"><!-- content -->
-     <h2><span id="u16928">[&nbsp; ]</span>Equipo 17</h2>
+     <h2><span id="u16928">[&nbsp; ]</span>Equipo 10</h2>
     </div>
    </div>
    <div class="verticalspacer" data-offset-top="5873" data-content-above-spacer="5873" data-content-below-spacer="116"></div>
