--- a/semana-1.html
+++ b/semana-1.html
@@ -37,7 +37,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <div class="clearfix" id="page"><!-- group -->
    <div class="clearfix grpelem" id="ppu8168"><!-- column -->
     <img class="position_content" id="u8678_img" src="images/sem1portada.jpg?crc=4221219675" alt="" width="1200" height="676"/>
-     <div class="browser_width grpelem" id="u8168-bw">
+    <div class="clearfix colelem" id="pu8168"><!-- group -->
+   
       <div id="u8168"><!-- group -->
        <div class="clearfix" id="u8168_align_to_page">
 
