--- a/semana-1.html
+++ b/semana-1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html class="nojs html css_verticalspacer" lang="es-ES">
  <head>
@@ -8,12 +9,11 @@
   <script type="text/javascript">
    // Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
-
 // Check that all required assets are uploaded and up-to-date
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "jquery.musemenu.js", "jquery.scrolleffects.js", "require.js", "semana-1.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/icon.ico?crc=328987819"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=328987819"/>
   <title>SEMANA 1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=186167303"/>
@@ -34,23 +34,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
    </head>
  <body>
- <div class="clearfix" id="page"><!-- group -->
+
+  <div class="clearfix" id="page"><!-- group -->
    <div class="clearfix grpelem" id="ppu8168"><!-- column -->
-    <img class="position_content" id="u8678_img" src="images/sem1portada.jpg?crc=4221219675" alt="" width="1200" height="676"/>
+    <img class="position_content" id="u8678_img" src="images/1.jpg?crc=4221219675" alt="" width="1200" height="676">
     <div class="clearfix colelem" id="pu8168"><!-- group -->
      <div class="browser_width grpelem" id="u8168-bw">
       <div id="u8168"><!-- group -->
        <div class="clearfix" id="u8168_align_to_page">
-
         <div class="T-tulo-H1 clearfix grpelem" id="u8165-4"><!-- content -->
-
-         <h1>Analisis del caso</h1>
+         <h1>Presentación de la problemática</h1>
         </div>
        </div>
       </div>
      </div>
      <div class="browser_width grpelem" id="u8347-bw">
-      <div class="museBGSize" id="u8347"><!-- simple frame --></div>
+      
      </div>
     </div>
     <div class="clearfix colelem" id="pbuttonu22782"><!-- group -->
@@ -244,7 +243,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
     <div class="T-tulos-H2 clearfix ose_pre_init mse_pre_init" id="u16928-5"><!-- content -->
-     <h2><span id="u16928">[&nbsp; ]</span>Equipo 10</h2>
+     <h2><span id="u16928">[&nbsp; ]</span>Equipo 17</h2>
     </div>
    </div>
    <div class="verticalspacer" data-offset-top="5873" data-content-above-spacer="5873" data-content-below-spacer="116"></div>
@@ -278,7 +277,6 @@ $('#u16928-5').registerOpacityScrollEffect([{"in":[null,581.9],"opacity":0,"fade
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
-
 </script>
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=380897831" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
