--- a/semana-1.html
+++ b/semana-1.html
@@ -40,10 +40,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <img class="position_content" id="u8678_img" src="images/1.jpg?crc=4221219675" alt="" width="1200" height="676">
     <div class="clearfix colelem" id="pu8168"><!-- group -->
      <div class="browser_width grpelem" id="u8168-bw">
+      <div class="museBGSize" id="u8347"><!-- simple frame --></div>
       <div id="u8168"><!-- group -->
        <div class="clearfix" id="u8168_align_to_page">
         <div class="T-tulo-H1 clearfix grpelem" id="u8165-4"><!-- content -->
-         <h1>Presentación de la problemática</h1>
+         <h1>Análisis del caso</h1>
         </div>
        </div>
       </div>
