--- a/semana-1.html
+++ b/semana-1.html
@@ -84,7 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="Texto clearfix colelem" id="u22594-4"><!-- content -->
      <b><u><h2>Caso a tratar:</h2></u></b>
-     <iframe src="https://docs.google.com/viewer?url=http://eva.upch.edu.pe/pluginfile.php/651090/mod_folder/content/0/CC_Grupo3_Arritmia.pdf?forcedownload=1&embedded=true" width="600" height="780" style="border: none;"></iframe> 
+     <iframe src="https://docs.google.com/viewer?url=https://es.slideshare.net/AlejandroFloresYaga/cc-grupo3-arritmia&embedded=true" width="600" height="780" style="border: none;"></iframe> 
      <p>Durante las pruebas con nuestro prototipo, el diseño de la almohadilla que va dentro de nuestro prototipo y sirve para que el muñón no se encuentre en contacto directo con el socket. Este no era lo suficientemente voluminoso ni suave, por lo que se re diseñó para que fuera más cómodo para el uso del paciente. Actualmente, esta nueva almohadilla se encuentra en impresión.</p>
     </div>
     <div class="clearfix colelem" id="pu23383"><!-- group -->
