--- a/semana-1.html
+++ b/semana-1.html
@@ -84,14 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="Texto clearfix colelem" id="u22594-4"><!-- content -->
      <b><u><h2>Caso a tratar:</h2></u></b>
-     <section data-index="1" class="slide show" itemprop="image" style="position: relative;">
-                <img class="slide_image" src="https://image.slidesharecdn.com/ccgrupo3arritmia-190828004853/95/cc-grupo3-arritmia-1-638.jpg?cb=1566954368" data-small="https://image.slidesharecdn.com/ccgrupo3arritmia-190828004853/85/cc-grupo3-arritmia-1-320.jpg?cb=1566954368" data-normal="https://image.slidesharecdn.com/ccgrupo3arritmia-190828004853/95/cc-grupo3-arritmia-1-638.jpg?cb=1566954368" data-full="https://image.slidesharecdn.com/ccgrupo3arritmia-190828004853/95/cc-grupo3-arritmia-1-1024.jpg?cb=1566954368" alt="CASO: Muerte Súbita
-Autor: Pedro Segura
-DATOS PERSONALES
-Paciente: Varón (NN) de 29 años.
-Estado civil: Soltero
-Natural: L...">
-            </section>
+     <iframe src="https://docs.google.com/viewer?url=https://es.slideshare.net/AlejandroFloresYaga/cc-grupo3-arritmia&embedded=true" width="600" height="780" style="border: none;"></iframe>
      <p>Durante las pruebas con nuestro prototipo, el diseño de la almohadilla que va dentro de nuestro prototipo y sirve para que el muñón no se encuentre en contacto directo con el socket. Este no era lo suficientemente voluminoso ni suave, por lo que se re diseñó para que fuera más cómodo para el uso del paciente. Actualmente, esta nueva almohadilla se encuentra en impresión.</p>
     </div>
     <div class="clearfix colelem" id="pu23383"><!-- group -->
