--- a/semana-1.html
+++ b/semana-1.html
@@ -82,6 +82,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <h1>OPTIMIZACIÓN DEL PROTOTIPO</h1>
      </div>
     </div>
+    <div style="width=500px;height=400px;">
+      <embed height="100%" width="100%" name="embed_content" src="images/caso.pdf" type="application/pdf"/>
+     </div>
     <div class="Texto clearfix colelem" id="u22594-4"><!-- content -->
      <p>Durante las pruebas con nuestro prototipo, el diseño de la almohadilla que va dentro de nuestro prototipo y sirve para que el muñón no se encuentre en contacto directo con el socket. Este no era lo suficientemente voluminoso ni suave, por lo que se re diseñó para que fuera más cómodo para el uso del paciente. Actualmente, esta nueva almohadilla se encuentra en impresión.</p>
     </div>
