--- a/semana-1.html
+++ b/semana-1.html
@@ -12,8 +12,8 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "jquery.scrolleffects.js", "require.js", "semana-13.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=328987819"/>
-  <title>SEMANA 13</title>
+  <link rel="shortcut icon" href="images/icon.ico?crc=328987819"/>
+  <title>SEMANA 1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=186167303"/>
   <link rel="stylesheet" type="text/css" href="css/semana-13.css?crc=13277077" id="pagesheet"/>
@@ -79,11 +79,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu21937-4"><!-- column -->
     <div class="browser_width colelem" id="u21937-4-bw">
      <div class="T-tulo-H1 clearfix" id="u21937-4"><!-- content -->
-      <h1>OPTIMIZACIÓN DEL PROTOTIPO</h1>
+      <h1>Análisis del caso</h1>
      </div>
     </div>
     <div class="Texto clearfix colelem" id="u22594-4"><!-- content -->
-      <div style="width=1000px;height=500px;">
+      <div style="width=400px;height=500px;float:left;">
       <embed height="100%" width="100%" name="embed_content" src="images/caso.pdf" type="application/pdf"/>
      </div>
      <p></p>
