--- a/semana-1.html
+++ b/semana-1.html
@@ -83,7 +83,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="Texto clearfix colelem" id="u22594-4"><!-- content -->
-      <div style="width="400px";height="500px";">
+      <div style="width=400px;height=5000px;">
       <embed height="100%" width="100%" name="embed_content" src="images/caso.pdf" type="application/pdf"/>
      </div>
      <p></p>
