--- a/semana-1.html
+++ b/semana-1.html
@@ -83,9 +83,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="Texto clearfix colelem" id="u22594-4"><!-- content -->
-      <div style="width=400px;height=5000px;">
-      <embed height="100%" width="100%" name="embed_content" src="images/caso.pdf" type="application/pdf"/>
-     </div>
+     <embed src="images/caso.pdf" type="application/pdf" width="100%" height="600px" />
+
      <p></p>
      <p></p>
     </div>
