--- a/semana-1.html
+++ b/semana-1.html
@@ -90,39 +90,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     
     <div class="Texto clearfix colelem" id="u23446-4"><!-- content -->
-     <p>Inicialmente, nuestro socket incluía un liner hecho de silicona RTB. El proceso era envolver el muñón de yeso con varias capas pequeñas que, al recubrirlo, tuviera un espesor muy pequeño. Después, como se muestra en el video, al secar esta capa de yeso, la cortamos con la herramienta dremel para liberar al muñón y volvemos a cubrir la parte cortada del yeso con más capas de yeso. Después se hace el mismo proceso que el inicial con el muñón de yeso, solo que las capas de yeso esta vez serán mucho mas grandes, para formar una capa de yeso de mayor diámetro, el proceso de liberación de esta capa al secarse es el mismo que el anterior,&nbsp; teniendo así 2 bases de yeso. Sobre un plano, colocamos la base pequeña encima de la grande, cubrimos con papel periódico la parte hueca de la base pequeña, y finalmente vertemos la silicona RTB en el espacio entre ambas bases, obteniendo así la forma de nuestro liner.</p>
+     <p>text</p>
     </div>
-    <div class="colelem" id="u23442"><!-- custom html -->
-     <iframe width="640" height="560" src="https://player.vimeo.com/video/301371119" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
-    </div>
-    <div class="Texto clearfix colelem" id="u23395-4"><!-- content -->
-     <p>Sin embargo,&nbsp; al realizar las pruebas&nbsp; en nuestro socket, nos percatamos de que no había necesidad de usar el liner de silicona. El liner cumple la función de succión, pero nuestro liner no entraría en contacto directo con el socket por la bolsa aneroide, y por lo tanto no cumpliría la función. Entonces detuvimos el proceso del liner antes de usar la silicona. Por lo tanto, procederemos a usar una media que cubra al muñón en el momento de utilizar el socket.</p>
-    </div>
-    <div class="clearfix colelem" id="pu23406"><!-- group -->
-     <div class="clip_frame grpelem" id="u23406"><!-- image -->
-      <img class="block" id="u23406_img" src="images/captura7.jpg?crc=67580325" alt="" width="422" height="562"/>
-     </div>
-     <div class="clip_frame grpelem" id="u23398"><!-- image -->
-      <img class="block" id="u23398_img" src="images/captura8.jpg?crc=515208540" alt="" width="422" height="562"/>
-     </div>
-    </div>
-    <div class="T-tulos-H2 clearfix colelem" id="u23427-4"><!-- content -->
-     <h2>Recomendaciones posteriores</h2>
-    </div>
-    <div class="Texto clearfix colelem" id="u23418-7"><!-- content -->
-     <p>Nuestro socket se enfocó en la autoajustabilidad con el muñón, pero existen otras dificultades que afectan al muñón con el uso del socket, una de ellas son las infecciones provocadas por el sudor que produce el muñón dentro del socket, el cual es el ambiente ideal para el crecimiento de hongos. Recomendamos la adición de perlas antifúngicas al socket, la cual fue parte de nuestra propuesta número 3, y no pudimos agregar al proyecto debido a la falta de tiempo en las pruebas que necesitaríamos para este semestre. Además, en el caso particular asignado de nuestra paciente, ella no presentaba alguna infección en su muñón.</p>
-     <p>&nbsp;</p>
-     <p>El problema de nuestro socket es el nivel de presión que puede soportar el muñón debido a que un exceso puede cortar la circulación para esto hemos planeado a futuro colocar bolsas aneroides delgadas (un total de 4)&nbsp; radialmente tal que al inflarse&nbsp; estas no afecten al muñón debido a que no cortan la circulación de manera radial y de esta manera lograremos aumentar la presión y asi el paciente podrá levantar mucho mas peso en la etapa de rehabilitación.</p>
-    </div>
-   </div>
+    
    <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu22669"><!-- container box -->
-    <a class="block" href="semana-12.html"><!-- Block link tag --></a>
-    <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="semana-12.html"><!-- content --><p>Semana 12</p></a>
+    <a class="block" href="index.html"><!-- Block link tag --></a>
+    <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="index.html"><!-- content --><p>Inicio</p></a>
    </div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu23421"><!-- container box -->
-    <a class="block" href="index.html"><!-- Block link tag --></a>
-    <a class="nonblock nontext clearfix grpelem" id="u23422-4" href="index.html"><!-- content --><p>Semana 14</p></a>
+    <a class="block" href="semana.html"><!-- Block link tag --></a>
+    <a class="nonblock nontext clearfix grpelem" id="u23422-4" href="semana.html"><!-- content --><p>Semana 2</p></a>
    </div>
   </div>
   <!-- Other scripts -->
