--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="clearfix colelem" id="pu7584-6"><!-- group -->
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7584-6" data-content-guid="u7584-6_content"><!-- content -->
            <h3>Andrés Reyes</h3>
-           <h3>Coordinador administrativo</h3>
+           <h3>Coordinador de diseño</h3>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7591-6" data-content-guid="u7591-6_content"><!-- content -->
            <h3>Arelí Sánchez</h3>
-           <h3>Coordinador administrativo</h3>
+           <h3>Coordinadora de materiales</h3>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7632-6" data-content-guid="u7632-6_content"><!-- content -->
            <h3>Alejandro Flores</h3>
