--- a/semana-1.html
+++ b/semana-1.html
@@ -92,7 +92,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="Texto clearfix colelem" id="u23446-4"><!-- content -->
      <p>text</p>
     </div>
-    
+    <div class="colelem" id="u23442"><!-- custom html -->
+    </div>
+    <div class="Texto clearfix colelem" id="u23395-4"><!-- content -->
+    </div>
+    <div class="clearfix colelem" id="pu23406"><!-- group -->
+         </div>
+     </div>
+    </div>
+    <div class="T-tulos-H2 clearfix colelem" id="u23427-4"><!-- content -->
+  
+    </div>
+    <div class="Texto clearfix colelem" id="u23418-7"><!-- content -->
+      <p>&nbsp;</p>
+    </div>
+   </div>
    <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu22669"><!-- container box -->
     <a class="block" href="index.html"><!-- Block link tag --></a>
