--- a/semana-1.html
+++ b/semana-1.html
@@ -107,14 +107,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>&nbsp;</p>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
+    <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu22669"><!-- container box -->
-    <a class="block" href="index.html"><!-- Block link tag --></a>
-    <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="index.html"><!-- content --><p>Inicio</p></a>
+    <a class="block" href="semana-12.html"><!-- Block link tag --></a>
+    <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="semana-12.html"><!-- content --><p>Semana 12</p></a>
    </div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu23421"><!-- container box -->
-    <a class="block" href="semana.html"><!-- Block link tag --></a>
-    <a class="nonblock nontext clearfix grpelem" id="u23422-4" href="semana.html"><!-- content --><p>Semana 2</p></a>
+    <a class="block" href="index.html"><!-- Block link tag --></a>
+    <a class="nonblock nontext clearfix grpelem" id="u23422-4" href="index.html"><!-- content --><p>Semana 14</p></a>
    </div>
   </div>
   <!-- Other scripts -->
