--- a/semana-1.html
+++ b/semana-1.html
@@ -90,24 +90,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     
     <div class="Texto clearfix colelem" id="u23446-4"><!-- content -->
-     <p>text</p>
-    </div>
+     <p></p>
+           </div>
     <div class="colelem" id="u23442"><!-- custom html -->
     </div>
     <div class="Texto clearfix colelem" id="u23395-4"><!-- content -->
+     <p></p>
     </div>
     <div class="clearfix colelem" id="pu23406"><!-- group -->
-         </div>
+     <div class="clip_frame grpelem" id="u23406"><!-- image -->
+     </div>
+     <div class="clip_frame grpelem" id="u23398"><!-- image -->
      </div>
     </div>
     <div class="T-tulos-H2 clearfix colelem" id="u23427-4"><!-- content -->
-  
+     <h2>Defición de Taquicardia Ventricular/h2>
     </div>
     <div class="Texto clearfix colelem" id="u23418-7"><!-- content -->
-      <p>&nbsp;</p>
-    </div>
+     <p></p>
+     <p>&nbsp;</p>
+     <p></p>
+     </div>
    </div>
-    <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
+   <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu22669"><!-- container box -->
     <a class="block" href="semana-12.html"><!-- Block link tag --></a>
     <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="semana-12.html"><!-- content --><p>Semana 12</p></a>
