--- a/semana-1.html
+++ b/semana-1.html
@@ -104,7 +104,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="T-tulos-H2 clearfix colelem" id="u23427-4"><!-- content -->
-     <h2>Defición de Taquicardia Ventricular/h2>
+     <h2>Defición de Taquicardia Ventricular</h2>
     </div>
     <div class="Texto clearfix colelem" id="u23418-7"><!-- content -->
      <p></p>
@@ -114,12 +114,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <div class="verticalspacer" data-offset-top="2819" data-content-above-spacer="2818" data-content-below-spacer="62"></div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu22669"><!-- container box -->
-    <a class="block" href="semana-12.html"><!-- Block link tag --></a>
-    <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="semana-12.html"><!-- content --><p>Semana 12</p></a>
+    <a class="block" href="index.html"><!-- Block link tag --></a>
+    <a class="nonblock nontext clearfix grpelem" id="u22670-4" href="index.html"><!-- content --><p>Inicio</p></a>
    </div>
    <div class="pointer_cursor Button rounded-corners clearfix grpelem" id="buttonu23421"><!-- container box -->
-    <a class="block" href="index.html"><!-- Block link tag --></a>
-    <a class="nonblock nontext clearfix grpelem" id="u23422-4" href="index.html"><!-- content --><p>Semana 14</p></a>
+    <a class="block" href="sem.html"><!-- Block link tag --></a>
+    <a class="nonblock nontext clearfix grpelem" id="u23422-4" href="sem.html"><!-- content --><p>Semana 12</p></a>
    </div>
   </div>
   <!-- Other scripts -->
