--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
          <div class="clearfix colelem" id="pu7532"><!-- group -->
           <div class="clip_frame clearfix grpelem" id="u7532"><!-- image -->
-           <img class="position_content temp_no_img_src" id="u7532_img" data-orig-src="images/andres.jpg?crc=3773832018" alt="" width="234" height="354" src="images/blank.gif?crc=4208392903"/>
+           <img class="position_content temp_no_img_src" id="u7532_img" data-orig-src="images/andres1.jpg?crc=3773832018" alt="" width="234" height="354" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u11263"><!-- image -->
-           <img class="block temp_no_img_src" id="u11263_img" data-orig-src="images/areli.jpg?crc=80175385" alt="" width="233" height="321" src="images/blank.gif?crc=4208392903"/>
+           <img class="block temp_no_img_src" id="u11263_img" data-orig-src="images/areli1.jpg?crc=80175385" alt="" width="233" height="321" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u7554"><!-- image -->
-           <img class="block temp_no_img_src" id="u7554_img" data-orig-src="images/alejo.jpg?crc=406752802" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
+           <img class="block temp_no_img_src" id="u7554_img" data-orig-src="images/alejo1.jpg?crc=406752802" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u7569"><!-- image -->
            <img class="block temp_no_img_src" id="u7569_img" data-orig-src="images/richi.jpg?crc=3777532604" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
