--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
      <div class="T-tulos-H2 clearfix mse_pre_init shared_content" id="u3889-5" data-content-guid="u3889-5_content"><!-- content -->
-      <h5><span id="u3889">[&nbsp; ]</span>ELECS</h5>
+      <h5><span id="u3889"></span>ELECtrodocs</h5>
      </div>
      <div class="browser_width mse_pre_init shared_content" id="u16441-bw" data-content-guid="u16441-bw_content">
       <div class="ose_pre_init" id="u16441"><!-- simple frame --></div>
