--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
      <div class="T-tulos-H2 clearfix mse_pre_init shared_content" id="u3889-5" data-content-guid="u3889-5_content"><!-- content -->
-      <h5><span id="u3889"><img class="position_content temp_no_img_src" id="u7532_img" data-orig-src="images/icon.png?crc=3773832018" alt="" width="20" height="23" src="images/blank.gif?crc=4208392903"/></span>ELECtrodocs</h5>
+      <h5><span id="u3889"><img class="position_content temp_no_img_src" id="u7532_img" data-orig-src="images/heart.png?crc=3773832018" alt="" width="15" height="20" src="images/blank.gif?crc=4208392903"/></span>ELECtrodocs</h5>
      </div>
      <div class="browser_width mse_pre_init shared_content" id="u16441-bw" data-content-guid="u16441-bw_content">
       <div class="ose_pre_init" id="u16441"><!-- simple frame --></div>
