--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <img class="block temp_no_img_src" id="u11263_img" data-orig-src="images/areli1.jpeg?crc=80175385" alt="" width="233" height="321" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u7554"><!-- image -->
-           <img class="block temp_no_img_src" id="u7554_img" data-orig-src="images/alejo1.jpeg?crc=406752802" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
+           <img class="block temp_no_img_src" id="u7554_img" data-orig-src="images/alejoo.jpeg?crc=406752802" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
           </div>
           <div class="clip_frame grpelem" id="u7569"><!-- image -->
            <img class="block temp_no_img_src" id="u7569_img" data-orig-src="images/richi.jpg?crc=3777532604" alt="" width="233" height="316" src="images/blank.gif?crc=4208392903"/>
