--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7647-6" data-content-guid="u7647-6_content"><!-- content -->
            <h3>Ricardo Guerrero</h3>
            <h3>Coordinador principal</h3>
+           <h5>Como todo estudiante de Ingeniería Biomédica tengo un gran compromiso con la búsqueda de nuevas e innovadoras ideas para mejorar la situación actual de la salud en nuestro país. Si algo debo resaltar de mi persona es la perseverancia, la resiliencia y la puntualidad. No obstante, antes de todos estos importantes valores, siempre tengo presente el respeto frente a mí y a los demás.</h5>
           </div>
          </div>
         </div>
