--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7591-6" data-content-guid="u7591-6_content"><!-- content -->
            <h3>Arelí Sánchez</h3>
            <h3>Coordinadora de materiales</h3>
+           <h3>'</h3>
+           <h5><i>"Considero que la ciencia y la empatía son los principales pilares para que como ingenieros biomédicos, encontremos soluciones que puedan servir de ayuda a muchas personas. Soy una persona curiosa y los valores por los que más me veo representada son el respeto, la transparencia, y la justicia."</i></h5>
+
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7632-6" data-content-guid="u7632-6_content"><!-- content -->
            <h3>Alejandro Flores</h3>
