--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <h3>Coordinador</h3>
            <h3>técnico</h3>
           <h3></h3>
-           <h5><i>"Nunca te rindas. Es una de las frases que a menudo me repito; nunca lo he hecho y creo que nadie debería. Una de cualidades que destaco de mi persona es la disciplina y el ser multifacético. Además, aprendo cosas de manera rápida y fácil, lo cual me ha ayudado a lo largo de mi vida académica."</i></h5>
+           <h5><i>"Nunca te rindas. Es una de las frases que a menudo me repito; nunca lo he hecho y creo que nadie debería. Una de las cualidades que destaco de mi persona es la disciplina y el ser multifacético. Además, tengo la habilidad de aprender cosas de manera rápida y fácil, lo cual me ha ayudado a lo largo de mi vida académica."</i></h5>
           </div>
           <div class="Subt-tulos-H3 clearfix grpelem shared_content" id="u7647-6" data-content-guid="u7647-6_content"><!-- content -->
            <h3>Ricardo Guerrero</h3>
